2002-05-07  Roland McGrath  <roland@frob.com>

	* init.c (reboot_system): u_int -> size_t
	(reboot_system): Likewise.
	(S_msg_report_wait): int -> mach_msg_id_t

2002-03-23  James A. Morrison  <ja2morri@uwaterloo.ca>

	* init.c (reboot_mach): Use ERR, not errno.
	(run): Likewise.
	(lauch_core_servers): Likewise.
	(run_for_real): Use MACH_PORT_NULL explicitly.
	(start_child): Likewise.

2002-01-02  Roland McGrath  <roland@frob.com>

	* init.c [KERN_INVALID_LEDGER]:
	Pass extra arguments to task_create for OSF variant.

2001-08-23  Roland McGrath  <roland@frob.com>

	* init.c (main): Pass ARGP_NO_ERRS|ARGP_IN_ORDER to argp_parse.

2001-08-20  Roland McGrath  <roland@frob.com>

	* init.c [! SPLIT_INIT]: All this code removed.
	[SPLIT_INIT]: This code no longer conditional.
	(_PATH_RUNCOM, mapped_time, do_fastboot): Removed.
	* Makefile (split-init): Variable removed.
	(SRCS): Add stubs.c here unconditionally.
	[$(split-init) = no]: Conditional defns removed.
	(LCLHDRS): Variable removed.
	* ttys.c, ttys.h: Files removed.

	* init.c (kernel_command_line): Variable removed.
	(options, parse_opt): Remove -K option.
	(frob_kernel_process): Collect arguments from &global_argv[1]
	instead of slicing up kernel_command_line.
	(start_child): Take a second arg, if non-null more arguments for PROG.
	(launch_something): Change caller.  On first try, pass &global_argv[1].

2001-07-02  Roland McGrath  <roland@frob.com>

	* init.c (reboot_system): Don't pass null pointer to RPC out param.
	Thanks to Moritz Schulte <moritz@chaosdorf.de> for finding this.

2001-01-17  Neal H Walfield  <neal@cs.uml.edu>

	* init.c (open_console): Conform to new fshelp_start_translator
	semantics.

2000-12-21  Marcus Brinkmann  <marcus@gnu.org>

	* init.c (process_rc_script): If malloc fails, return ENOMEM.
	Reported by Igor Khavkine <i_khavki@alcor.concordia.ca>.

2000-03-17  Thomas Bushnell, BSG  <tb@mit.edu>

	* init.c (launch_core_servers): Don't use MOVE_SEND in Hurd RPCs.
